--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "uber",
+  "name": "pulsometr",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ARKobelkov/projectCM.git"
+    "url": "git+https://github.com/ARKobelkov/Pulsometr.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ARKobelkov/projectCM/issues"
+    "url": "https://github.com/ARKobelkov/Pulsometr/issues"
   },
-  "homepage": "https://github.com/ARKobelkov/projectCM#readme",
+  "homepage": "https://github.com/ARKobelkov/Pulsometr#readme",
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
